    * 3865 oracle_sessions: now relative levels for sessions are configurable...
    * 3647 check_http: Improved rendering of the extended performance data
    * 3867 filter 'Servicegroup (Regex)' can be negated
    * 3868 f5_bigip_cluster_status: node states are configurable for F5 BigIP devices since version 11.2
    * 3869 ipmi: now IPMI sensors can be ignored by their status texts during discovery
    * 3744 synology_info: Now also displays OS version
    * 3799 agent_netapp: No longer requires the files NaServer/NaElements. Reduced CPU usage by 2/3...
    * 3872 mcafee_webgateway, mcafee_webgateway_misc: new checks which monitor some statistics of McAfee web gatway devices
    * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
    * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
    * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
    * 3075 FIX: windows agent: fixed data encryption of realtime updates were incompatible...
    * 3205 FIX: raritan_pdu_inlet: Fixed exception in case phases report a non OK state
    * 3206 FIX: esx_vsphere_hostsystem.mem_usage_cluster: Fixed broken check
    * 3207 FIX: msexch_dag.copyqueue: Fixed broken check in case of non OK state
    * 3209 FIX: esx_vsphere_datastores: Added missing uncommitted and overprovisioned graphs
    * 3210 FIX: oracle_asm_diskgroup: Fixed exception when using required mirror free space parameter
    * 3211 FIX: logwatch: Fixed broken error messages in case of failed filesystem operations
    * 3212 FIX: cmciii.phase: Fixed totally broken check
    * 3213 FIX: ibm_svc_disks netapp_api_disk: Fixed exception when disks are failed
    * 3185 FIX: ucd_cpu_load: this service will be discovered although we prefer HOST-RESOURCES MIB
            NOTE: Please refer to the migration notes!
    * 3176 FIX: Fix invalid scaling of some obscure metrics by factor 100...